--- a/site/config.toml
+++ b/site/config.toml
@@ -26,7 +26,7 @@ paginate = 10
 		# Replace the avatar with a picture of your own under static/images
 		avatar = "avatar.jpg"
 		# Use Markdown to format the string. This works nearly all over the theme
-		bio = "**I'm Strata**, a super simple<br> responsive site template freebie<br> crafted by [HTML5 UP](//html5up.net)."
+		bio = "**Tämä on blogi**, a super simple<br> responsive site template freebie<br> crafted by [HTML5 UP](//html5up.net)."
 		# The icons will be shown if you enter your username
 		twitter = "spf13"
 		github = "spf13"
@@ -131,13 +131,13 @@ paginate = 10
 
 # Menu links that appear on the left sidebar
 [[menu.main]]
-	name = "Home"
+	name = "Koti"
 	url  = "/"
 	weight = 0
 
 [[menu.main]]
-	name = "About"
-	url  = "about"
+	name = "Minusta"
+	url  = "minusta"
 	weight = 5
 
 [[menu.main]]
