--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "site/static/img/blog" # Folder where user uploaded files should go
+media_folder: "site/static/images/uploads" # Folder where user uploaded files should go
 public_folder: "img/blog"
 
 collections: # A list of collections the CMS should be able to edit
