--- a/site/config.toml
+++ b/site/config.toml
@@ -28,7 +28,7 @@ paginate = 10
 		# Use Markdown to format the string. This works nearly all over the theme
 		bio = "**Tervetuloa**, tällä sivustolla sijaitsee <br><nimi> blogi <br>."
 		# The icons will be shown if you enter your username
-		twitter = "santtuvp"
+		twitter = ""
 		github = ""
 		dribbble = ""
 		facebook = ""
